recent build with most bugs fixed and deployed

--- a/react-portfolio-contentful/src/assets/styles/_base.scss
+++ b/react-portfolio-contentful/src/assets/styles/_base.scss
@@ -54,6 +54,10 @@ li {
 	line-height: 1.35rem;
 	list-style-type: disc;
 	margin-bottom: 0.75rem;
+
+	&:last-child {
+		margin-bottom: 0;
+	}
 }
 
 .button {
