--- a/react-portfolio-contentful/src/assets/styles/_components/_carousel.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_carousel.scss
@@ -3,10 +3,14 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin-top: 6rem;
+    margin-top: 2rem;
     max-width: 960px;
     padding: 1rem 1rem;
     width: 100%;
+
+    @media screen and (min-width: $screen-sm) {
+        margin-top: 6rem;
+    }
 
     .carousel_title {
         align-self: start;
@@ -29,9 +33,13 @@
 
     &__item {
         border-radius: 1rem;
-        display: block;
+        display: flex;
         min-width: 160px;
         width: 100%;
+
+        &:last-child {
+            margin-bottom: 0.75rem;
+        }
 
         @media screen and (min-width: $screen-xs) {
             width: 48%;
