--- a/react-portfolio-contentful/src/assets/styles/_components/_topic.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_topic.scss
@@ -122,7 +122,7 @@
         }
 
         .job_summary {
-            border-left: 4px solid $brand-yellow;
+            border-left: 2px solid $brand-yellow;
             padding: 0.5rem 0 0.5rem 2rem;
 
             p {
@@ -192,7 +192,7 @@
             }
 
             .topic_body {
-                border-left: 4px solid $brand-yellow;
+                border-left: 2px solid $brand-yellow;
                 margin-left: 0.75rem;
                 padding: 0.5rem 0 0.5rem 1rem;
 
@@ -211,7 +211,11 @@
                 }
 
                 ul {
-                    padding-left: 0.25rem;
+                    padding-left: 1.25rem;
+
+                    @media screen and (min-width: $screen-xs) {
+                        padding-left: 0.25rem;
+                    }
                 }
 
                 @media screen and (min-width: $screen-xs) {
